<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <GridLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"

        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:rowCount="8"
        tools:context=".LoginFragment">

        <TextView
            android:id="@+id/host_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/server_host" />

        <EditText
            android:id="@+id/host"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_row="0"
            android:layout_column="1"
            android:hint="@string/prompt_server_host"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/port_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/server_port" />

        <EditText
            android:id="@+id/port"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="@string/prompt_port"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/username_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_row="2"
            android:layout_column="1"
            android:hint="@string/prompt_username"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/password_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_row="3"
            android:layout_column="1"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/first_name_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/first_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_row="4"
            android:layout_column="1"
            android:hint="@string/prompt_first_name"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/last_name_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/last_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_row="5"
            android:layout_column="1"
            android:hint="@string/prompt_last_name"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/email_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_row="6"
            android:layout_column="1"
            android:hint="@string/prompt_email"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/gender_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/gender"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_column="1"
            android:layout_row="7">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="Male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="Female" />
        </RadioGroup>

    </GridLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_sign_in_short"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.2"/>

        <Button
            android:id="@+id/register"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.2"/>

    </LinearLayout>


</LinearLayout>