<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_show_family_tree_lines"
            android:text="@string/show_family_tree_lines"
            android:textSize="22sp"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_switch_family_tree_lines"
            android:checked="true"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_life_story_lines"
            android:text="@string/show_life_story_lines"
            android:textSize="22sp"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_switch_life_story_lines"
            android:checked="true"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/show_spouse_line_title"
            android:text="@string/show_spouse_line"
            android:textSize="22sp"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_switch_spouse_line"
            android:checked="true"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_paternal_events"
            android:text="@string/show_paternal_events"
            android:textSize="22sp"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_switch_paternal_events"
            android:checked="true"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_show_maternal_events"
            android:text="@string/show_maternal_events"
            android:textSize="22sp"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_switch_maternal_events"
            android:checked="true"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_show_male_events"
            android:text="@string/show_male_events"
            android:textSize="22sp"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_switch_male_events"
            android:checked="true"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_show_female_events"
            android:text="@string/show_female_events"
            android:textSize="22sp"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_switch_female_events"
            android:checked="true"
            android:orientation="horizontal" />
    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logout"/>

</LinearLayout>