<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActivity">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/person_first_name"
      android:textSize="22sp"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/first_name_label"
      android:text="@string/prompt_first_name"
      android:textSize="12sp"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/person_last_name"
      android:textSize="22sp"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/last_name_label"
      android:text="@string/prompt_last_name"
      android:textSize="12sp"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/person_gender"
      android:textSize="22sp"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/gender_label"
      android:text="@string/prompt_gender"
      android:textSize="12sp"/>
  <ExpandableListView
      android:id="@+id/expandable_list_view"
      android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
      android:dividerHeight="0.5dp"
      android:divider="@android:color/darker_gray"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp" />

  </LinearLayout>